chrome://accessibility: Don't refresh page on ToggleAccessibility

When the accessibility mode is toggled for individual pages, update the
single row by calling showTree rather than refreshing the whole page.

Bug: 877705
Change-Id: I5c7986fc970f9789bb421525ccea5f68f5fd57e9
Reviewed-on: https://chromium-review.googlesource.com/c/1269236
Commit-Queue: James Wallace-Lee <jamwalla@chromium.org>
Reviewed-by: David Tseng <dtseng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601338}
Former-commit-id: c409c0daecbfb353ca9fb64c1791284065724481